infra/k8s/nats.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              '-p', # this should stand for port
              '4222', # value of the port flag
              '-m',
              '8222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'tickety',
            ] ## add extra commands so the container can run the command on startup...we can reference all the different arguments and what they are about using the doc in dockerhub

# clusterIP service to get access connection to the deployment above
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring # this is for http monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
